# iPlug2

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .llmenv.yaml  .travis.yml  ARCHITECTURE_REVIEW.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FindFaust.cmake  GEMINI.md  IPlug2-doc.md  LICENSE.txt  README.md  README.txt  azure-pipelines.yml  azure-projects.yml  backup.command  common-ios.xcconfig  common-linux.mk  common-mac.xcconfig  common-wasm.mk  common-web-em.mk  common-web-hybrid.mk  common-web.mk  common-win.props  common.props  common.vsprops  common.xcconfig  cpp.hint  iPlug2.cmake  iPlug2.code-workspace  iPlug2Config.cmake  iplug2.cmake  select_host.py  todo.txt
Dependencies/: CMakeLists.txt  README.md  download-prebuilt-libs.sh
Dependencies/Extras/: README.md
Dependencies/IGraphics/: IGraphicsLibraries.sln  README.md  build-igraphics-libs-mac.sh  build-igraphics-libs-win.bat  build-igraphics-libs-win.ps1  build-libs-mac.sh  build-libs-win.bat  build-resvg-mac.sh  build-resvg-win.bat  build-skia-ios.sh  build-skia-linux.sh  build-skia-mac.sh  build-skia-win.sh  build-skia.py  common-win.props  download-igraphics-libs-win.sh  download-igraphics-libs.sh  download-lib-src.sh  package-deps-src.sh  run-skia-viewer-mac.sh  run-skia-viewer-win.sh  skia.patch
Dependencies/IPlug/: README.md  download-clap-sdks.sh  download-iplug-libs.sh  download-iplug-sdks.sh  download-vst3-sdk.sh  download-wam-sdk.sh  vst3sdk.patch
Examples/: CMakeLists.txt  Makefile  README.md  buildall-mac.sh  buildall-win.bat  buildall-win.ps1  duplicate.py  gitignore_template
Examples/CursesTest/: CursesTest.cpp  CursesTest.sln  Makefile  main.cpp  readme-linux.txt
Examples/IGraphicsTest/: IGraphicsTest.cpp  IGraphicsTest.h  IGraphicsTest.sln  IGraphicsTest_controls.h  Makefile  compile-test.sh  config.h  main.cpp  main_dialog.cpp  main_linux.cpp  main_mac.mm  main_web.cpp  main_win.cpp  readme-linux.txt
Examples/IPlugAppExperiment/: IPlugAppExperiment.sln  README.md  config.h  main_dialog_proc.cpp  main_dialog_proc.hpp  main_swell.cpp  render_dialog_proc.cpp  render_dialog_proc.hpp
Examples/IPlugCLITest/: CMakeLists.txt  IPlugCLITest.cpp  IPlugCLITest.h  config.h
Examples/IPlugChromogram/: CMakeLists.txt  IPlugChromogram.RPP  IPlugChromogram.cpp  IPlugChromogram.h  IPlugChromogram.sln  README.md  config.h
Examples/IPlugChunks/: CMakeLists.txt  IPlugChunks.RPP  IPlugChunks.cpp  IPlugChunks.h  IPlugChunks.sln  IPlugChunks_controls.h  README.md  config.h
Examples/IPlugCocoaUI/: CMakeLists.txt  IPlugCocoaUI-Bridging-Header.h  IPlugCocoaUI-Shared.h  IPlugCocoaUI.RPP  IPlugCocoaUI.h  IPlugCocoaUI.mm  IPlugCocoaUI.sln  README.md  config.h
Examples/IPlugControls/: CMakeLists.txt  IPlugControls.RPP  IPlugControls.cpp  IPlugControls.h  IPlugControls.sln  IconsFontaudio.h  IconsForkAwesome.h  Makefile  PageIBControls.h  PageISVGControls.h  PageIVControls.h  PageMiscControls.h  PageVisualizerControls.h  README.md  config.h
Examples/IPlugConvoEngine/: CMakeLists.txt  IPlugConvoEngine.RPP  IPlugConvoEngine.cpp  IPlugConvoEngine.h  IPlugConvoEngine.sln  README.md  config.h  ir.h
Examples/IPlugDrumSynth/: CMakeLists.txt  IPlugDrumSynth.RPP  IPlugDrumSynth.cpp  IPlugDrumSynth.h  IPlugDrumSynth.sln  IPlugDrumSynth_DSP.h  README.md  config.h
Examples/IPlugEffect/: CMakeLists.txt  IPlugEffect.RPP  IPlugEffect.code-workspace  IPlugEffect.cpp  IPlugEffect.frag  IPlugEffect.h  IPlugEffect.sln  IPlugEffect_DSP.h  IPlugEffect_controls.h  IPlugEffect_editor.cpp  IPlugEffect_shaders.h  Makefile  Makefile-wam  Makefile-web  Noise.dsp  Noise.hpp  Osc.dsp  Osc.hpp  README.md  common.mk  compile-wam.sh  config.h  project-simple.yml  project.yml
Examples/IPlugElements/: IPlugElements.RPP  IPlugElements.cpp  IPlugElements.h  IPlugElements.sln  README.md  config.h
Examples/IPlugEmbedPlatformView/: .gitignore  IPlugEmbedPlatformView.RPP  IPlugEmbedPlatformView.cpp  IPlugEmbedPlatformView.h  IPlugEmbedPlatformView.sln  MyPlatformControl.cpp  MyPlatformControl.h  MyPlatformControl.mm  NSView+PinEdges.h  NSView+PinEdges.mm  README.md  UIView+PinEdges.h  UIView+PinEdges.mm  config.h
Examples/IPlugFaustDSP/: CMakeLists.txt  FaustCode.hpp  IPlugFaustDSP.RPP  IPlugFaustDSP.cpp  IPlugFaustDSP.dsp  IPlugFaustDSP.h  IPlugFaustDSP.sln  Makefile  README.md  config.h
Examples/IPlugFaustExample/: FaustCode.hpp  Makefile  (+6 more)
IGraphics/: CMakeLists.txt  IControl.cpp  IControl.h  IGraphics.cpp  IGraphics.h  IGraphicsAccessibility.h  IGraphicsAutoGUI.h  IGraphicsConstants.h  IGraphicsEditorDelegate.cpp  IGraphicsEditorDelegate.h  IGraphicsFontMeta.h  IGraphicsLiveEdit.h  IGraphicsPathBase.h  IGraphicsPopupMenu.h  IGraphicsPrivate.h  IGraphicsStructs.h  IGraphicsUtilites.h  IGraphicsUtilities.h  IGraphics_include_in_plug_hdr.h  IGraphics_include_in_plug_src.h  IGraphics_select.h  ISender.h
IPlug/: CMakeLists.txt  Containers.h  Doxyfile  Hosts.cpp  Hosts.h  IBitmapMonoText.cpp  IBitmapMonoText.h  IControl.cpp  IControl.h  IGraphics.cpp  IGraphics.h  IGraphicsAGG.cpp  IGraphicsAGG.h  IGraphicsCairo.cpp  IGraphicsCairo.h  IGraphicsCarbon.cpp  IGraphicsCarbon.h  IGraphicsCocoa.h  IGraphicsCocoa.mm  IGraphicsConstants.h  IGraphicsLice.cpp  IGraphicsLice.h  IGraphicsMac.h  IGraphicsMac.mm  IGraphicsStructs.h  IGraphicsWin.cpp  IGraphicsWin.h  IKeyboardControl.h  IMidiQueue.h  IParam.cpp  IParam.h  IPlug.cpp  IPlug.h  IPlug.vcxproj  IPlugAAX.cpp  IPlugAAX.h  IPlugAPIBase.cpp  IPlugAPIBase.h  IPlugAPP.cpp  IPlugAPP.h  (+98 more)
Tests/: CMakeLists.txt  README.md
WDL/: CMakeLists.txt  assocarray.h  audiobuffercontainer.cpp  audiobuffercontainer.h  base64encdec.h  besselfilter.cpp  besselfilter.h  convoengine.cpp  convoengine.h  coreaudio_channel_formats.h  denormal.h  dirscan.h  fft.c  fft.h  filebrowse.cpp  filebrowse.h  filename.h  fileread.h  filewrite.h  fnv64.h  has_strings.h  heapbuf.h  jsonparse.h  lameencdec.cpp  lineparse.h  md5.c  md5.h  metadata.h  mutex.h  pcmfmtcvt.h  projectcontext.cpp  ptrlist.h  ptrlist_indexed.h  queue.h  resample.cpp  resample.h  scalafile.h  scsrc.cpp  scsrc.h  sharedpool.h  (+23 more)
(+7400 files in other folders)
